--- a/src/main/resources/templates/balancesheet_alt.html
+++ b/src/main/resources/templates/balancesheet_alt.html
@@ -1,58 +1,120 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" 
-		xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head th:replace ="fragments :: head"></head>
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<head th:replace="fragments :: head"></head>
 <body>
-<div th:replace ="fragments :: navbar"></div>
-<div class="container text-center">
-    <div>
-        <form th:action="@{/logout}" method="post">
-            <p>
-                Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b>
-            </p>
-            <input type="submit" value="Sign Out" />
-        </form>
-    </div>
-    <div>
-        <h1>Balance Sheet</h1>
-    </div>
-     
-    <div>
-    	<div class=scrol_daybook>
-        <div class="col-xs-6 col-md-6" style="padding:0">
-        <table class="table table-striped table-bordered">
-            <thead class="thead-dark">
-                <tr>
-                    <th id="center_align">Liability</th>
-                    <th id="center_align">Amount</th>
-                </tr>
-            </thead>
-            <tbody>
-               		<tr th:each="liability: ${liabilities}" >
-               		 <td id="left_align" th:text ="${liability.acc}" th:attrappend="isHeader=${liability.header}">Acc Head Name</td>
-               		 <td id="right_align" th:text="${liability.amt}" th:attrappend="isHeader=${liability.header}">Debit</td>
-               		</tr>
-            </tbody>
-        </table>
-        </div>
-        <div class="col-xs-6 col-md-6" style="padding:0">
-         <table class="table table-striped table-bordered">
-            <thead class="thead-dark">
-                <tr>
-                    <th id="center_align">Asset</th>
-                    <th id="center_align">Amount</th>
-                </tr>
-            </thead>
-            <tbody>
-               		<tr th:each="asset: ${assets}" th:attrappend="isHeader=${asset.header}">
-               		 <td id="left_align" th:text ="${asset.acc}" th:attrappend="isHeader=${asset.header}">Acc Head Name</td>
-               		 <td id="right_align" th:text="${asset.amt}" th:attrappend="isHeader=${asset.header}">Debit</td>
-               		</tr>
-            </tbody>
-        </table>
-        </div>
-        </div>
-    </div>
-</div>
+	<div th:replace="fragments :: navbar"></div>
+	<div class="container text-center">
+		<div>
+			<form th:action="@{/logout}" method="post">
+				<p>
+					Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b>
+				</p>
+				<input type="submit" value="Sign Out" />
+			</form>
+		</div>
+		<div>
+			<h1>Balance Sheet</h1>
+		</div>
+
+		<div>
+			<div class=scrol_daybook>
+				<div class="col-xs-6 col-md-6" style="padding: 0">
+					<table class="table table-striped table-bordered" id="lia">
+						<thead class="thead-dark">
+							<tr>
+								<th id="center_align">Liability</th>
+								<th id="center_align">Amount</th>
+							</tr>
+						</thead>
+						<tbody id="liabilities">
+							<tr th:each="liability: ${liabilities}">
+								<td id="left_align" th:text="${liability.acc}"
+									th:attrappend="isHeader=${liability.header}">Acc Head Name</td>
+								<td id="right_align" th:text="${liability.amt}"
+									th:attrappend="isHeader=${liability.header}">Debit</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<div class="col-xs-6 col-md-6" style="padding: 0">
+					<table class="table table-striped table-bordered" id="asst">
+						<thead class="thead-dark">
+							<tr>
+								<th id="center_align">Asset</th>
+								<th id="center_align">Amount</th>
+							</tr>
+						</thead>
+						<tbody id="assets">
+							<tr th:each="asset: ${assets}"
+								th:attrappend="isHeader=${asset.header}">
+								<td id="left_align" th:text="${asset.acc}"
+									th:attrappend="isHeader=${asset.header}">Acc Head Name</td>
+								<td id="right_align" th:text="${asset.amt}"
+									th:attrappend="isHeader=${asset.header}">Debit</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script>
+	window.onload = function(){
+		let expenses = document.getElementById("liabilities").children;
+		let incomes = document.getElementById("assets").children;
+		var size = expenses.length;
+		var size2 = incomes.length;
+		
+		if(size > size2){
+			align(incomes,expenses,true);
+		} else {
+			align(expenses,incomes,false);
+		}
+	}
+	
+	function align (table,reference,side){
+		let r1;
+		let r2 = reference.length-1;
+		for(var i=0; i<reference.length;i++ ){
+			if (reference[i].innerHTML.includes("Total")){
+				r1 = i;
+				break;
+			}
+		}
+			let t1;
+			for(var i=0; i<table.length;i++ ){
+				if (table[i].innerHTML.includes("Total")){
+					t1 = i;
+					break;
+				}
+			}
+			
+				var t2 = table.length-1;
+				var d1 = r1- t1;
+				if(side){
+				var table = document.getElementById("asst");
+				} else {
+				var table = document.getElementById("lia");
+				}
+				for (var i = 0; i < d1; i++){
+					var row = table.insertRow(t1+1);
+					var cell1 = row.insertCell(0);
+					var cell2 = row.insertCell(1);
+					cell1.innerHTML = "&nbsp;";
+					cell2.innerHTML = "&nbsp;";
+				}
+				
+				 var d2 = r2 - t2 - d1;
+				for (var i = 0; i < d2; i++){
+					var row = table.insertRow(t2+1);
+					var cell1 = row.insertCell(0);
+					var cell2 = row.insertCell(1);
+					cell1.innerHTML = "&nbsp;";
+					cell2.innerHTML = "&nbsp;";
+				}
+	}
+	
+</script>
 </body>
 </html>
