--- a/src/main/resources/templates/tradingPL_alt.html
+++ b/src/main/resources/templates/tradingPL_alt.html
@@ -20,14 +20,14 @@
     <div>
     	<div class=scrol_daybook>
         <div class="col-xs-6 col-md-6" style="padding:0">
-        <table class="table table-striped table-bordered">
+        <table class="table table-striped table-bordered" id="exp">
             <thead class="thead-dark">
                 <tr>
                     <th id="center_align">Expenses</th>
                     <th id="center_align">Amount</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="expenses">
                		<tr th:each="expense: ${expenses}">
                		 <td id="left_align" th:text ="${expense.acc}" th:attrappend="isHeader = ${expense.header}">Acc Head Name</td>
                		 <td id="right_align" th:text="${expense.amt}" th:attrappend="isHeader = ${expense.header}">Debit</td>
@@ -36,14 +36,14 @@
         </table>
         </div>
         <div class="col-xs-6 col-md-6" style="padding:0">
-         <table class="table table-striped table-bordered">
+         <table class="table table-striped table-bordered" id ="inc">
             <thead class="thead-dark">
                 <tr>
                     <th id="center_align">Income</th>
                     <th id="center_align">Amount</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="incomes">
                		<tr th:each="income: ${incomes}" >
                		 <td id="left_align" th:text ="${income.acc}" th:attrappend="isHeader = ${income.header}">Acc Head Name</td>
                		 <td id="right_align" th:text="${income.amt}" th:attrappend="isHeader = ${income.header}">Debit</td>
@@ -54,5 +54,62 @@
         </div>
     </div>
 </div>
+<script>
+	window.onload = function(){
+		let expenses = document.getElementById("expenses").children;
+		let incomes = document.getElementById("incomes").children;
+		var size = expenses.length;
+		var size2 = incomes.length;
+		
+		if(size > size2){
+			align(incomes,expenses,true);
+		} else {
+			align(expenses,incomes,false);
+		}
+	}
+	
+	function align (table,reference,side){
+		let r1;
+		let r2 = reference.length-1;
+		for(var i=0; i<reference.length;i++ ){
+			if (reference[i].innerHTML.includes("Total")){
+				r1 = i;
+				break;
+			}
+		}
+			let t1;
+			for(var i=0; i<table.length;i++ ){
+				if (table[i].innerHTML.includes("Total")){
+					t1 = i;
+					break;
+				}
+			}
+			
+				var t2 = table.length-1;
+				var d1 = r1- t1;
+				if(side){
+				var table = document.getElementById("inc");
+				} else {
+				var table = document.getElementById("exp");
+				}
+				for (var i = 0; i < d1; i++){
+					var row = table.insertRow(t1+1);
+					var cell1 = row.insertCell(0);
+					var cell2 = row.insertCell(1);
+					cell1.innerHTML = "&nbsp;";
+					cell2.innerHTML = "&nbsp;";
+				}
+				
+				 var d2 = r2 - t2 - d1;
+				for (var i = 0; i < d2; i++){
+					var row = table.insertRow(t2+1);
+					var cell1 = row.insertCell(0);
+					var cell2 = row.insertCell(1);
+					cell1.innerHTML = "&nbsp;";
+					cell2.innerHTML = "&nbsp;";
+				}
+	}
+	
+</script>
 </body>
 </html>
